Fix columns size for vertical columns in compact mode + use ionicons for sun/restore display of sun icon on mobile (#239)

--- a/css/dashboard_columns.css
+++ b/css/dashboard_columns.css
@@ -15,11 +15,7 @@
             margin-right: 10px;
         }
 
-        #dashcontent > section.compact {
-            width: 200px;
-        }
-            
-        #dashcontent > section > div.row.divider {
+        #dashcontent > section:not(.compact) > div.row.divider {
            grid-template-columns: none !important;
         }
 }
